stylesheets/components/_block-2.scss
// // Image-Text-Block

.block-2 {
  @include bg(orange);
  width: 100%;
  border-radius: $border-radius;
  overflow: hidden;
  display: flex;
  flex-direction: column;

  &--green {
    @include bg(green);
  }
  &--blue {
    @include bg(dark_blue);
  }
  &--grey {
    @include bg(grey);
  }

  &__block {
    width: 100%;
    display: flex;
    flex-direction: column;

    &--center {
      align-items: center;
      padding: 2.5rem;

      & > img {
        max-width: 350px;
        border-radius: $border-radius;
      }
    }
  }

  & picture {
    max-height: 25rem;
  }

  &__img {
    height: 100%;
    object-fit: cover;
    max-height: 25rem;
  }

  &__text {
    @include fg(white);

    &--center {
      text-align: center;
    }

    &--large {
      @extend .text-lg;
    }
  }

  &__button {
    margin-top: 2rem;
  }
}

// 768+
@include md {
  .block-2 {
    flex-direction: row;

    &--multiple {
      &:first-of-type {
        border-radius: $border-radius $border-radius 0 0;
      }
      &:nth-of-type(n + 2) {
        border-radius: 0;
      }
      &:last-of-type {
        border-radius: 0 0 $border-radius $border-radius;
      }

      &:nth-of-type(2n) .block-2__block {
        &:first-child {
          order: 2;
        }
        &:last-child {
          order: 1;
        }
      }
    }

    &__block {
      width: 50%;
      align-items: flex-start;
      justify-content: center;

      &--center {
        align-items: center;
        padding: 5rem;
      }
    }

    & picture {
      max-height: 45rem;
    }

    &__img {
      max-height: inherit;
    }

    &__button {
      margin-top: 4rem;
    }
  }
}

// 1200+
@include xl {
  .block-2 {
    &__text {
      font-size: 2.2rem;
    }
  }
}

